[package]
name = "face-detection"
version = "0.1.0"
authors = ["HunterSun2008 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.12.0"
# tensorflow = { version = "0.13.0", features = ["tensorflow_gpu"] }
image = "0.21.0"
imageproc = "0.18.0"
structopt = "0.2"